--- a/checkout.html
+++ b/checkout.html
@@ -100,6 +100,12 @@
                     >
                         Login
                     </a>
+                    <a
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        href="contact.html"
+                    >
+                        Contact us
+                    </a>
                     <div @click.away="open = false" class="relative" x-data="{ open: false }">
                         <button
                             @click="open = !open"
@@ -151,7 +157,7 @@
                 <div class="mb-10">
                     <div class="mt-5 dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic text-xs lg:text-base xl:text-base cursor-pointer">Returning customer? <span class="text-red-400" id="loginbtn">Click here to login</span></div>
                     <div class="border border-gray-200 xl:p-8 hidden mt-3 dark:border-gray-400" id="login">
-                        <h1 class="text-gray-700 font-bold text-xl pb-3">Please login your account</h1>
+                        <h1 class="text-gray-700 font-bold text-xl pb-3 dark:text-white">Please login your account</h1>
                         <div class=" xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
                             <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your name">
                             <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your email address">
@@ -167,7 +173,7 @@
                     </div>
                     <div class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic mt-5 text-xs lg:text-base xl:text-base cursor-pointer">Have a coupon? <span class="text-red-400" id="couponBtn"> Click here to enter your code</span></div>
                     <div class="border border-gray-200 xl:p-8 hidden mt-3 dark:border-gray-400" id="coupon">
-                        <h1 class="text-gray-700 font-bold text-xl pb-3">If you have a coupon code, please apply it below.</h1>
+                        <h1 class="text-gray-700 font-bold text-xl pb-3 dark:text-gray-100">If you have a coupon code, please apply it below.</h1>
                         <div class=" xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
                             <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your name">
                         </div>
