--- a/register.html
+++ b/register.html
@@ -100,6 +100,12 @@
                     >
                         Login
                     </a>
+                    <a
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        href="contact.html"
+                    >
+                        Contact us
+                    </a>
                     <div @click.away="open = false" class="relative" x-data="{ open: false }">
                         <button
                             @click="open = !open"
@@ -146,8 +152,8 @@
             </div>
         </div>
 
-        <div class="flex items-center justify-center px-5 py-5 mt-44">
-            <div class="bg-gray-100 dark:bg-gray-800 text-gray-500 rounded-xl shadow w-full overflow-hidden" style="max-width: 1000px;">
+        <div class="register-main-heading">
+            <div class="register-body" style="max-width: 1250px;">
                 <div class="md:flex w-full">
                     <div class="hidden md:block w-1/2 bg-indigo-500 py-10 px-10">
                         <svg id="a87032b8-5b37-4b7e-a4d9-4dbfbe394641" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="100%" height="auto" viewBox="0 0 744.84799 747.07702">
@@ -268,9 +274,9 @@
                             />
                         </svg>
                     </div>
-                    <div class="w-full md:w-1/2 py-10 px-5 md:px-10 border border-gray-50 dark:border-gray-600">
+                    <div class="register-blog">
                         <div class="text-center mb-10">
-                            <h1 class="font-bold text-3xl text-gray-900 dark:text-gray-100">REGISTER</h1>
+                            <h1 class="register-heading">REGISTER</h1>
                             <p class="dark:text-gray-100">Enter your information to register</p>
                         </div>
                         <div>
@@ -278,15 +284,13 @@
                                 <div class="xl:w-1/2 lg:w-1/2 w-1/1 px-3 mb-5">
                                     <label for="" class="text-xs font-semibold px-1 dark:text-gray-100">First name</label>
                                     <div class="flex mt-1">
-                                        <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-account-outline text-gray-400 text-lg"></i></div>
-                                        <input type="text" class="w-full -ml-10 pl-10 pr-3 py-2 text-white rounded-lg border-2 dark:border-gray-500 dark:bg-transparent border-gray-200 outline-none focus:border-indigo-500" placeholder="John" />
+                                        <input type="text" class="reg-firstName-input" placeholder="John" />
                                     </div>
                                 </div>
                                 <div class="xl:w-1/2 lg:w-1/2 w-1/1 px-3 mb-5 dark:text-gray-100">
                                     <label for="" class="text-xs font-semibold px-1">Last name</label>
                                     <div class="flex mt-1">
-                                        <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-account-outline text-gray-400 text-lg"></i></div>
-                                        <input type="text" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg text-white dark:border-gray-500 dark:bg-transparent border-2 border-gray-200 outline-none focus:border-indigo-500" placeholder="Smith" />
+                                        <input type="text" class="reg-lastName-input" placeholder="Smith" />
                                     </div>
                                 </div>
                             </div>
@@ -294,8 +298,7 @@
                                 <div class="w-full px-3 mb-5">
                                     <label for="" class="text-xs font-semibold px-1 dark:text-gray-100">Email</label>
                                     <div class="flex mt-1">
-                                        <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-email-outline text-gray-400 text-lg"></i></div>
-                                        <input type="email" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg text-white dark:border-gray-500 dark:bg-transparent border-2 border-gray-200 outline-none focus:border-indigo-500" placeholder="johnsmith@example.com" />
+                                        <input type="email" class="reg-email-input" placeholder="johnsmith@example.com" />
                                     </div>
                                 </div>
                             </div>
@@ -303,14 +306,13 @@
                                 <div class="w-full px-3 mb-12">
                                     <label for="" class="text-xs font-semibold px-1 dark:text-gray-100">Password</label>
                                     <div class="flex mt-1">
-                                        <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"><i class="mdi mdi-lock-outline text-gray-400 text-lg"></i></div>
-                                        <input type="password" class="w-full -ml-10 pl-10 pr-3 py-2 text-white dark:border-gray-500 dark:bg-transparent rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500" placeholder="************" />
+                                        <input type="password" class="reg-pas-input" placeholder="************" />
                                     </div>
                                 </div>
                             </div>
                             <div class="flex">
                                 <div class="w-full mb-5">
-                                    <button class="block w-full bg-indigo-500 hover:bg-indigo-700 text-white border dark:hover:bg-indigo-500 border-indigo-50 dark:border-gray-500 dark:bg-transparent focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold">REGISTER NOW</button>
+                                    <button class="reg-button">REGISTER NOW</button>
                                 </div>
                             </div>
                         </div>
