--- a/contact.html
+++ b/contact.html
@@ -78,9 +78,9 @@
                 <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none focus:shadow-outline"
-                        href="#"
+                        href="index.html"
                     >
-                        Blog
+                    Shop
                     </a>
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
@@ -160,21 +160,21 @@
                             <div class="h-16 w-16 border-pink-600 border-2 flex justify-center items-center mx-auto h-16 w-16 text-4xl mx-auto rounded-full bg-transparent group-hover:bg-pink-600 group-hover:text-white transition duration-500 ease-in-out">
                                 <i class="fas fa-map-marker-alt text-pink-600 group-hover:text-white transition duration-500 ease-in-out"></i>
                             </div>
-                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl">Our Location</h1>
-                            <p class="text-gray-600 pt-3">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
+                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl dark:text-white">Our Location</h1>
+                            <p class="text-gray-600 pt-3 dark:text-white">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
                         </div>
                         <div class="text-center border border-gray-200 px-1 py-16 group xl:mt-0 lg:mt-0 md:mt-0 mt-6">
                             <div class="h-16 w-16 border-pink-600 border-2 flex justify-center items-center mx-auto h-16 w-16 text-4xl mx-auto rounded-full bg-transparent group-hover:bg-pink-600 group-hover:text-white transition duration-500 ease-in-out">
                                 <i class="fas fa-mobile-alt text-pink-600 group-hover:text-white transition duration-500 ease-in-out"></i>
                             </div>
-                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl">Our Location</h1>
-                            <p class="text-gray-600 pt-3">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
+                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl dark:text-white">Our Location</h1>
+                            <p class="text-gray-600 pt-3 dark:text-white">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
                         </div><div class="text-center border border-gray-200 px-1 py-16 group xl:mt-0 lg:mt-0 md:mt-0 mt-6">
                             <div class="h-16 w-16 border-pink-600 border-2 flex justify-center items-center mx-auto h-16 w-16 text-4xl mx-auto rounded-full bg-transparent group-hover:bg-pink-600 group-hover:text-white transition duration-500 ease-in-out">
                                 <i class="fas fa-envelope text-pink-600 group-hover:text-white transition duration-500 ease-in-out"></i>
                             </div>
-                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl">Our Location</h1>
-                            <p class="text-gray-600 pt-3">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
+                            <h1 class="font-rubic font-medium pt-3 text-gray-800 text-xl dark:text-white">Our Location</h1>
+                            <p class="text-gray-600 pt-3 dark:text-white">(800) 123 456 789 / (800) 123 456 789 info@example.com</p>
                         </div>
                     </div>
                     <form class="mt-20">
@@ -192,7 +192,7 @@
                                     <textarea class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm w-full h-44 focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500"
                                     id="message" type="text" placeholder="Message"></textarea>
                                 </div>
-                                <div class="mt-5">
+                                <div class="mt-8">
                                     <a href="#" class="bg-red-600 text-white py-4 px-5 font-semibold hover:bg-gray-900 hover:text-white transition duration-500 ease-in-out">Send A Message</a>
                                 </div>
                             </div>
