--- a/login.html
+++ b/login.html
@@ -78,9 +78,9 @@
                 <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none focus:shadow-outline"
-                        href="#"
+                        href="index.html"
                     >
-                        Blog
+                    Shop
                     </a>
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
@@ -158,7 +158,7 @@
                     <!-- Row -->
                     <div class="loginrow">
                         <!-- Col -->
-                        <div class="loging-bg-img" style="background-image: url('https://source.unsplash.com/K4mSJ7kc0As/600x800');"></div>
+                        <div class="loging-bg-img" style="background-image: url('images/images.jpeg');"></div>
                         <!-- Col -->
                         <div class="logindesc">
                             <h3 class="pt-4 text-2xl text-center">Welcome Back!</h3>
