--- a/shop.html
+++ b/shop.html
@@ -58,7 +58,7 @@
     </head>
 
     <body class="body">
-        <div class="container-fluid bg-white shadow py-3 w-full">
+        <div class="container-fluid bg-white shadow py-3 w-full fixed top-0 z-40">
             <div class="container mx-auto">
                 <div
                     class="w-full py-4 flex justify-between items-center max-w-md md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
@@ -210,7 +210,7 @@
                                     <i class="fas fa-shopping-cart text-gray-500 mr-7 hover:text-red-600 cursor-pointer transition duration-300 ease-in-out"></i>
                                     <p class="absolute -top-3 right-3 h-4 w-4 bg-red-600 rounded-full text-white flex justify-center items-center text-xs">3</p>
                                 </button>
-                                <ul class="dropdown-content absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-10 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
+                                <ul class="dropdown-content z-10 bg-white absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-10 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
                                     <li class="shadow-lg px-3 py-3 mt-5">
                                         <div class="border-b-2 border-gray-200 pb-5">
                                             <div class="flex justify-between items-center">
@@ -383,9 +383,9 @@
                         <div class="border-b-2 border-gray-200 py-5 dark:border-gray-600">
                             <h1 class="pb-3 text-xl font-semibold text-gray-800 dark:text-gray-100">Price Filter</h1>
                             <p class="m-0 pb-5">Range: $100.00 - $1,300.00</p>
-                            <div class="flex justify-center items-center">
+                            <div class="flex justify-center items-center z-0">
                                 <div x-data="range()" x-init="mintrigger(); maxtrigger()" class="relative max-w-xl w-full">
-                                    <div>
+                                    <div class="z-40">
                                         <input
                                             type="range"
                                             step="1"
