--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
     </head>
 
     <body class="body">
-        <div class="container-fluid bg-white shadow py-3 w-full">
+        <div class="container-fluid bg-white shadow py-3 w-full fixed top-0">
             <div class="container mx-auto">
                 <div
                     class="w-full py-4 flex justify-between items-center max-w-md md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
@@ -167,7 +167,7 @@
                                         </a>
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent dark:text-gray-100 rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                                            href="login.html"
+                                            href="account.html"
                                         >
                                             My Account
                                         </a>
@@ -209,7 +209,7 @@
                                     <i class="fas fa-shopping-cart text-gray-500 mr-7 hover:text-red-600 cursor-pointer transition duration-300 ease-in-out"></i>
                                     <p class="absolute -top-3 right-3 h-4 w-4 bg-red-600 rounded-full text-white flex justify-center items-center text-xs">3</p>
                                 </button>
-                                <ul class="dropdown-content absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-10 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
+                                <ul class="dropdown-content bg-white z-10 absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-10 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
                                     <li class="shadow-lg px-3 py-3 mt-5">
                                         <div class="border-b-2 border-gray-200 pb-5">
                                             <div class="flex justify-between items-center">
