--- a/account.html
+++ b/account.html
@@ -123,7 +123,7 @@
                     <div>
                         <ul
                             :class="{'flex': open, 'hidden': !open}"
-                            class="leading-loose flex-col flex-grow py-10 md:pb-0 hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 w-full px-3 xl:py-0 lg:py-0 md:py-10"
+                            class="leading-loose flex-col flex-grow py-10 pt-10 md:pb-0 hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 w-full px-3 xl:py-0 lg:py-0 md:py-10"
                         >
                             <a
                                 href="#"
