--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 </div>
             </div>
         </div>
-        <dialog id="myModal" class="h-96 w-11/12 md:w-1/2 p-5 bg-gray-900 rounded-md">
+        <dialog id="myModal" class="h-96 w-11/12 md:w-1/2 p-5 bg-gray-900 rounded-md fixed">
             <div class="">
                 <!-- Header -->
                 <div class="flex w-full h-auto justify-end items-center">
