--- a/About.html
+++ b/About.html
@@ -161,9 +161,9 @@
                                     <div class="px-2 py-2 bg-white rounded-md shadow dark:bg-gray-800">
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:text-gray-100 dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                                            href="contact.html"
+                                            href="blog.html"
                                         >
-                                            Contact us
+                                            Blog
                                         </a>
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent dark:text-gray-100 rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
@@ -188,10 +188,10 @@
                             </div>
 
                             <a
-                                href="contact.html"
+                                href="blog.html"
                                 class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 xl:ml-4 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                             >
-                                Contact us
+                                Blog
                             </a>
 
                             <a
