--- a/login.html
+++ b/login.html
@@ -188,10 +188,10 @@
                             </div>
 
                             <a
-                                href="contact.html"
+                                href="blog.html"
                                 class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 xl:ml-4 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                             >
-                                Contact us
+                                Blog
                             </a>
 
                             <a
