--- a/single-product-.html
+++ b/single-product-.html
@@ -74,7 +74,7 @@
     </head>
 
     <body class="body">
-        <div class="container-fluid bg-white shadow py-3 w-full fixed top-0">
+        <div class="container-fluid bg-white shadow py-3 w-full fixed top-0 z-40">
             <div class="container mx-auto">
                 <div
                     class="w-full py-4 flex justify-between items-center max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
@@ -147,7 +147,12 @@
                             >
                                 Home
                             </a>
-
+                            <a
+                            href="shop.html"
+                            class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 xl:ml-4 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        >
+                            Shop
+                        </a>
                             <div
                                 @click.away="open = false"
                                 class="relative px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 xl:ml-4 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
@@ -170,12 +175,6 @@
                                     class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48"
                                 >
                                     <div class="px-2 py-2 bg-white rounded-md shadow dark:bg-gray-800">
-                                        <a
-                                            class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent dark:text-gray-100 rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                                            href="shop.html"
-                                        >
-                                            Shop
-                                        </a>
                                         <a
                                             class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:text-gray-100 dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                                             href="contact.html"
@@ -205,10 +204,10 @@
                             </div>
 
                             <a
-                                href="contact.html"
+                                href="blog.html"
                                 class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 xl:ml-4 lg:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                             >
-                                Contact us
+                                Blog
                             </a>
 
                             <a
