--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </ul>
                     </div>
                     <div class="flex justify-center items-center">
-                        <div class="">
+                        <div class="mr-5">
                             <div id="demo"></div>
                             <div class="dropdown inline-block relative">
                                 <button class="inline-flex items-center focus:outline-none relative">
